<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/sleep_dashboard_fl"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/sleep_entry"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011">

        <TextView
            android:id="@+id/date_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/dateText"
            android:textColor="@color/space_cadet"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slept_hours_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/hours_slept"
            android:textColor="@color/english_violet"
            android:textStyle="bold"
            android:gravity="end"
            />

        <TextView
            android:id="@+id/number_slept_hours_tv"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:fontFamily="@font/poppins"
            android:gravity="end"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/hoursSleptText"
            android:textColor="@color/space_cadet"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/number_feeling_tv"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:fontFamily="@font/poppins"
            android:gravity="end"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/feelingText"
            android:textColor="@color/space_cadet"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feeling_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/feelingPromptText"
            android:textColor="@color/english_violet"
            android:textStyle="bold"
            android:gravity="end"
            />

        <TextView
            android:id="@+id/sleep_log_notes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginStart="21dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/noteText"
            android:textColor="@color/english_violet"
            android:textStyle="bold" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>